--- a/client/src/components/properties-panel/propertiesView/PropertiesView.css
+++ b/client/src/components/properties-panel/propertiesView/PropertiesView.css
@@ -10,6 +10,15 @@
     margin-left: 10px;
 }
 
-Title{
-    color : red;
+.label-on-dark-background {
+    color:black;
+    font-weight: bold;
+}
+
+.sidebarWrapper {
+    margin-left: 100;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
