--- a/client/src/components/content/ModelerSidebar/ModelerSidebar.module.css
+++ b/client/src/components/content/ModelerSidebar/ModelerSidebar.module.css
@@ -3,3 +3,10 @@
   padding: 1rem;
   min-width: 350px !important;
 }
+
+.button {
+  width: 80%;
+  margin-top: 10px;
+  margin-left: 30px;
+  margin-right: 30px;
+}
