implement eriks design suggestions

--- a/client/src/components/content/RobotContainer/RobotContainer.module.css
+++ b/client/src/components/content/RobotContainer/RobotContainer.module.css
@@ -10,7 +10,7 @@
 
 .clickicon{
   font-size: '4rem';
-  color: var(--colorBackgroundCta);
+  color: var(--colorPrimary);
 }
 
 .clickiconCreateRobot {
