PR small fixes implemented

--- a/client/src/layout/corporateDesign.css
+++ b/client/src/layout/corporateDesign.css
@@ -1,4 +1,4 @@
-/* changes to the variables here also have to be made in corporateDesign.js !!! */
+/* changes to the variables here also have to be made in corporateDesign.js! */
 
 :root {
   --colorPrimary: #00c2ff;
