create checkboxes and first function

--- a/client/src/components/content/ModelerSidebar/ModelerSidebar.module.css
+++ b/client/src/components/content/ModelerSidebar/ModelerSidebar.module.css
@@ -1,5 +1,5 @@
 .label-on-dark-background {
-  color: var(--colorPrimaryInvertedText);
+  color: var(--colorPrimaryInvertedText) !important;
 }
 
 .title {
