small redesign and some refactroing

--- a/client/src/components/pages/RobotInteractionCockpit/RobotInteractionCockpit.module.css
+++ b/client/src/components/pages/RobotInteractionCockpit/RobotInteractionCockpit.module.css
@@ -2,3 +2,8 @@
   background-color: var(--colorPrimaryInverted);
   border-color: var(--colorPrimaryInverted);
 }
+
+.cardStyle {
+  margin: '24px' !important;
+  border-radius: '5px' !important;
+}
