--- a/client/src/layout/corporateDesign.css
+++ b/client/src/layout/corporateDesign.css
@@ -9,4 +9,6 @@
   --colorBackground2: #ffffff;
   --colorBackgroundText: #1d1d1f;
   --colorBackgroundCta: #ff6b00;
+  --colorSuccessNotificationBackground: #ebffeb;
+  --colorSuccessNotificationIcon: #08c908;
 }
