implement hint text (part 1)

--- a/client/src/components/content/ModelerSidebar/ModelerSidebar.module.css
+++ b/client/src/components/content/ModelerSidebar/ModelerSidebar.module.css
@@ -2,6 +2,10 @@
   color: var(--colorPrimaryInvertedText) !important;
 }
 
+.requiredStar {
+  color : var(--colorBackgroundCta) !important;
+}
+
 .title {
   margin-bottom: 0rem !important;
   color: var(--colorPrimaryInvertedText) !important;
