--- a/client/src/components/pages/RobotFile/RobotFile.module.css
+++ b/client/src/components/pages/RobotFile/RobotFile.module.css
@@ -3,3 +3,10 @@
   font-size: 1.25rem;
   background-color: var(--colorBackground2);
 }
+
+.syntaxModalButton {
+  width: 100%;
+  background-color: var(--colorPrimaryInverted2);
+  border-color: var(--colorPrimaryInverted2);
+}
+
