--- a/client/src/layout/corporateDesign.css
+++ b/client/src/layout/corporateDesign.css
@@ -11,7 +11,7 @@
   --colorBackgroundCta: #ff6b00;
   --colorSuccessNotificationBackground: #ebffeb;
   --colorSuccessNotificationIcon: #08c908;
-  --colorWarningNotificationBackground: #ffffD0;
+  --colorWarningNotificationBackground: #ffffd0;
   --colorWarningNotificationIcon: #ff6b00;
   --colorErrorNotificationBackground: #ffbbbb;
   --colorErrorNotificationIcon: #cc0000;
