--- a/client/src/components/pages/RobotInteractionCockpit/RobotInteractionCockpit.module.css
+++ b/client/src/components/pages/RobotInteractionCockpit/RobotInteractionCockpit.module.css
@@ -7,3 +7,12 @@
   margin: '24px' !important;
   border-radius: '5px' !important;
 }
+
+.statusIconStyle {
+  position: relative;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 3rem;
+  margin: 10px 10px 10px 10px;
+}
