--- a/client/src/components/pages/RobotInteractionCockpit/RobotInteractionCockpit.module.css
+++ b/client/src/components/pages/RobotInteractionCockpit/RobotInteractionCockpit.module.css
@@ -14,7 +14,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 3rem;
-  margin: 10px 10px 10px 10px;
+  margin: 10px;
 }
 
 .loadingStatusIconStyle {
